src/objects/User_Position_equivalence__c.object
<CustomObject>
    <fields>
        <fullName>Organizational_unit__c</fullName>
        <label>Organizational unit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_unit_code__c</fullName>
        <label>Organizational unit code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_position__c</fullName>
        <label>User position</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_position_code__c</fullName>
        <label>User position code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_position_equivalence__c</fullName>
        <label>User position equivalence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Cargo Equivalente</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organizational_unit_code__c</columns>
        <columns>Organizational_unit__c</columns>
        <columns>User_position_code__c</columns>
        <columns>User_position__c</columns>
        <columns>User_position_equivalence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>User Position equivalence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cargos Equivalentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>